# Wildlife

./: .dockerignore  .editorconf  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIB.rst  CONTRIBUTING.md  CONTRIBUTING.rst  DEPRECATED.rst  Dockerfile  LICENSE.rst  MANIFEST.in  Makefile  NEWS.rst  README.md  README.rst  SECURITY.md  clean.sh  cloc.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  tree.txt  treecloc.sh
Bio/: File.py  Seq.py  SeqFeature.py  SeqRecord.py  __init__.py  _utils.py  bgzf.py  cpairwise2module.c  pairwise2.py
Bio/Affy/: CelFile.py  __init__.py
Bio/Align/: AlignInfo.py  __init__.py  _aligncore.c  _alignmentcounts.c  _codonaligner.c  _pairwisealigner.c  _pairwisealigner.h  a2m.py  analysis.py  bed.py  bigbed.py  bigmaf.py  bigpsl.py  chain.py  clustal.py  emboss.py  exonerate.py  fasta.py  hhr.py  interfaces.py  maf.py  mauve.py  msf.py  nexus.py  phylip.py  psl.py  sam.py  stockholm.py  tabular.py
Bio/AlignIO/: ClustalIO.py  EmbossIO.py  FastaIO.py  Interfaces.py  MafIO.py  MauveIO.py  MsfIO.py  NexusIO.py  PhylipIO.py  StockholmIO.py  __init__.py
Bio/Alphabet/: __init__.py
Bio/Blast/: NCBIWWW.py  NCBIXML.py  __init__.py  _parser.py
Bio/CAPS/: __init__.py
Bio/Cluster/: __init__.py
Bio/Compass/: __init__.py
Bio/Data/: CodonTable.py  IUPACData.py  PDBData.py  __init__.py
Bio/Emboss/: Primer3.py  PrimerSearch.py  __init__.py
Bio/Entrez/: Parser.py  __init__.py
Bio/ExPASy/: Enzyme.py  Prodoc.py  Prosite.py  ScanProsite.py  __init__.py  cellosaurus.py
Bio/GenBank/: Record.py  Scanner.py  __init__.py  utils.py
Bio/Geo/: Record.py  __init__.py
Bio/Graphics/: BasicChromosome.py  ColorSpiral.py  Comparative.py  DisplayRepresentation.py  Distribution.py  KGML_vis.py  __init__.py
Bio/HMM/: __init__.py
Bio/KEGG/: REST.py  __init__.py
Bio/Medline/: __init__.py
Bio/NMR/: NOEtools.py  __init__.py  xpktools.py
Bio/Nexus/: Nexus.py  Nodes.py  StandardData.py  Trees.py  __init__.py  cnexus.c
Bio/PDB/: AbstractPropertyMap.py  Atom.py  Chain.py  DSSP.py  Dice.py  Entity.py  FragmentMapper.py  HSExposure.py  MMCIF2Dict.py  MMCIFParser.py  Model.py  NACCESS.py  NeighborSearch.py  PDBExceptions.py  PDBIO.py  PDBList.py  PDBMLParser.py  PDBParser.py  PICIO.py  PSEA.py  Polypeptide.py  Residue.py  ResidueDepth.py  SASA.py  SCADIO.py  Selection.py  Structure.py  StructureAlignment.py  StructureBuilder.py  Superimposer.py  __init__.py  cealign.py  ic_data.py  ic_rebuild.py  internal_coords.py  kdtrees.c  mmcifio.py  parse_pdb_header.py  qcprot.py  vectors.py
Bio/Pathway/: __init__.py
Bio/Phylo/: BaseTree.py  CDAO.py  CDAOIO.py  Consensus.py  NeXML.py  NeXMLIO.py  Newick.py  NewickIO.py  NexusIO.py  PhyloXML.py  PhyloXMLIO.py  TreeConstruction.py  __init__.py  _cdao_owl.py  _io.py  _utils.py
Bio/PopGen/: __init__.py
Bio/Restriction/: PrintFormat.py  Restriction.py  Restriction_Dictionary.py  __init__.py
Bio/SCOP/: Cla.py  Des.py  Dom.py  Hie.py  Raf.py  Residues.py  __init__.py
Bio/SVDSuperimposer/: __init__.py
Bio/SearchIO/: BlatIO.py  FastaIO.py  __init__.py  _index.py  _utils.py
Bio/SeqIO/: AbiIO.py  AceIO.py  FastaIO.py  GckIO.py  GfaIO.py  IgIO.py  InsdcIO.py  Interfaces.py  NibIO.py  PdbIO.py  PhdIO.py  PirIO.py  QualityIO.py  SeqXmlIO.py  SffIO.py  SnapGeneIO.py  SwissIO.py  TabIO.py  TwoBitIO.py  UniprotIO.py  XdnaIO.py  __init__.py  _index.py
Bio/SeqUtils/: CheckSum.py  IsoelectricPoint.py  MeltingTemp.py  ProtParam.py  ProtParamData.py  __init__.py  lcc.py
Bio/Sequencing/: Ace.py  Phd.py  __init__.py
Bio/SwissProt/: KeyWList.py  __init__.py
Bio/TogoWS/: __init__.py
Bio/UniGene/: __init__.py
Bio/UniProt/: GOA.py  __init__.py
Bio/codonalign/: __init__.py  codonalignment.py  codonseq.py
Bio/motifs/: __init__.py  _pwm.c  alignace.py  clusterbuster.py  mast.py  matrix.py  meme.py  minimal.py  pfm.py  thresholds.py  transfac.py  xms.py
Bio/phenotype/: __init__.py  phen_micro.py  pm_fitting.py
BioSQL/: BioSeq.py  BioSeqDatabase.py  DBUtils.py  Loader.py  __init__.py
Doc/: README.rst  biopdb_faq.tex  conf.py  doc.rst  doc.tex  index.rst
Doc/Tutorial/: chapter_align.rst  chapter_appendix.rst  chapter_bibliography.rst  chapter_blast.rst  chapter_cluster.rst  chapter_contributing.rst  chapter_cookbook.rst  chapter_entrez.rst  chapter_graphics.rst  chapter_introduction.rst  chapter_kegg.rst  chapter_motifs.rst  chapter_msa.rst  chapter_pairwise.rst  chapter_pairwise2.rst  chapter_pdb.rst  chapter_phenotype.rst  chapter_phylo.rst  chapter_popgen.rst  chapter_quick_start.rst  chapter_searchio.rst  chapter_seq_annot.rst  chapter_seq_objects.rst  chapter_seqio.rst  chapter_testing.rst  chapter_uniprot.rst  index.rst
Doc/_static/: wildlife.css
Doc/_templates/: versions.html
Doc/api/: index.rst
Doc/cookbook/: README
Doc/examples/: ACT_example.py  Proux_et_al_2002_Figure_6.py  clustal_run.py  fasta_dictionary.py  fasta_iterator.py  swissprot.py  www_blast.py
Scripts/: query_pubmed.py  scop_pdb.py  update_ncbi_codon_table.py
Scripts/GenBank/: check_output.py  check_output_simple.py
Scripts/PDB/: hsexpo.py  (+1 more)
Tests/: .coveragerc  biosql.ini.appveyor  biosql.ini.sample  common_BioSQL.py  common_BioSQL_online.py  pairwise2_testCases.py  requires_internet.py  run_tests.py  search_tests_common.py  seq_tests_common.py  test_Ace.py  test_Affy.py  test_AlignIO.py  test_AlignIO_ClustalIO.py  test_AlignIO_EmbossIO.py  test_AlignIO_FastaIO.py  test_AlignIO_MauveIO.py  test_AlignIO_PhylipIO.py  test_AlignIO_convert.py  test_Align_Alignment.py  test_Align_a2m.py  test_Align_bed.py  test_Align_bigbed.py  test_Align_bigmaf.py  test_Align_bigpsl.py  test_Align_chain.py  test_Align_clustal.py  test_Align_codonalign.py  test_Align_emboss.py  test_Align_exonerate.py  test_Align_fasta.py  test_Align_hhr.py  test_Align_maf.py  test_Align_mauve.py  test_Align_msf.py  test_Align_nexus.py  test_Align_phylip.py  test_Align_psl.py  test_Align_sam.py  test_Align_stockholm.py  (+171 more)
__future5/: 10_sql_cohort.txt
(+157 files in other folders)
