# ======================================================================
# Phenoteka — pyproject.toml
# ======================================================================
# This file defines how Phenoteka is built, packaged, tested, linted, and
# documented. It follows a modern Python packaging approach with:
#   - PEP 621 metadata in [project]
#   - `src/` layout for import hygiene and tool compatibility
#   - setuptools as the build backend
#   - rich (optional) extras for GUI, docs, notebooks, etc.
#
# Philosophy:
#   - Keep the *runtime* dependencies minimal and research‑grade.
#   - Push heavier stacks (GUI, notebooks, docs, semantic, imputation)
#     to optional extras so `pip install phenoteka` stays lean.
#   - Provide first‑class tooling: linting, typing, testing, coverage.
# ======================================================================


# ---------------------------
# Build system definition
# ---------------------------
[build-system]
# - setuptools: the canonical Python build system
# - wheel: ensures build produces a .whl (recommended for installs)
requires = ["setuptools>=68", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

# ---------------------------
# Project metadata (PEP 621)
# ---------------------------
[project]
# The name as published on PyPI
name = "phenoteka"

# Versioning: use explicit semver for now; can migrate to setuptools_scm later.
version = "0.1.0"

# One‑line summary for package indexes and installers
description = "A modular, research-grade platform for phenotypic data ETL, quality metrics, semantic harmonization, and intelligent imputation."

# Long form lives in README.md and is shown on package indexes
readme = "README.md"

# Choose the minimum supported Python. Phenoteka targets 3.12+.
requires-python = ">=3.12"

# License: matches repository LICENSE (Phenoteka uses AGPL-3.0-or-later per README)
license = { text = "AGPL-3.0-or-later" }

# Authors and maintainers
authors = [
  { name = "Eduardo Gusmao", email = "eduardo.gusmao@gusmaolab.org" },
  { name = "Halisson Cardoso", email = "halissonalberdan@gmail.com" },
  { name = "Natale Cavacana", email = "natale@gmail.com" },
  { name = "Dilza Campos", email = "dilza@biof.ufrj.br" },
]
maintainers = [
  { name = "Phenoteka Team", email = "contact@gusmaolab.org" },
]

# Keywords improve searchability on PyPI
keywords = [
  "phenotype", "cohort", "EHR", "ETL", "quality-metrics",
  "harmonization", "OMOP", "HPO", "LOINC", "SNOMED",
  "bioinformatics", "population-genomics", "Dash",
]

# Classifiers describe maturity, license, and audience in standardized ways
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


# ---------------------------
# Runtime dependencies (lean!)
# ---------------------------
# Keep the core install small. Heavy stacks are moved to [project.optional-dependencies].
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "PyYAML>=6.0",
  "pydantic>=2.6",           # Settings/config parsing
  "typing-extensions>=4.10",
  "Unidecode>=1.3",
  "rapidfuzz>=3.0",
  "networkx>=3.2",           # Lightweight, helpful for harmonization graphs
]

# ---------------------------
# Optional dependencies (extras)
# ---------------------------
[project.optional-dependencies]

# Interactive notebooks & analysis extras
notebooks = [
  "jupyterlab>=4.1",
  "ipykernel>=6.29",
  "nbclient>=0.10",
  "nbconvert>=7.14",
  "nbformat>=5.10",
]

# Development toolchain (format, lint, type check, release helpers)
dev = [
  "black>=24.10.0",
  "ruff>=0.5.0",           # Lint+format supertool; complements black
  "isort>=5.13.2",
  "flake8>=7.0.0",
  "pre-commit>=3.7.0",
  "mypy>=1.10.0",
  "tox>=4.15.0",
  "bump2version>=1.0.1",
  "build>=1.2.1",
  "twine>=5.1.1",
]

# Test stack (property-based, mocks, coverage)
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.5.0",
  "hypothesis>=6.100.0",
  "faker>=25.0.0",
  "responses>=0.25.0",
]

# Documentation (Sphinx primary; MyST for Markdown; nbsphinx to render notebooks)
docs = [
  "sphinx>=8.0.0",
  "myst-parser>=3.0.0",
  "sphinx-autodoc-typehints>=2.2.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-togglebutton>=0.3.2",
  "furo>=2024.8.6",
  "nbsphinx>=0.9.5",
  "sphinxcontrib-jquery>=4.0",
  "sphinxcontrib-htmlhelp>=2.0.0",
  "sphinxcontrib-serializinghtml>=1.1.10",
]

# GUI & visualization (kept optional to keep core lightweight)
gui = [
  "dash>=2.17.1",
  "plotly>=5.24.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2",
  "ydata-profiling>=4.8.3",
]

# API server (FastAPI + production ASGI server)
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
]

# Database backends (start with SQLite; allow Postgres later)
db = [
  "sqlalchemy>=2.0.30",
  "sqlite-utils>=3.36",
  "psycopg[binary]>=3.2.0",     # optional Postgres (can be dropped if unwanted)
]

# Semantic/NLP stack
semantic = [
  "spacy>=3.7.0",
  "transformers>=4.43.0",
  # "torch>=2.3.0",
]

# Imputation (TryDINN adapter + DL stack). TryDINN itself will be optional/imported lazily.
# imputation = [
#   "torch>=2.3.0",
#   "trydinn>=0.1.0",          # Uncomment once published to PyPI
#]

# External data exploration tools (optional, can be heavy)
exploration = [
  "great-expectations>=0.18.0",
  "sweetviz>=2.3.1",
  # "dtale>=3.9.0",
  # "autoviz>=0.1.84",
]


# ---------------------------
# Entry points (console scripts)
# ---------------------------
# This creates the `phenoteka` CLI executable in user environments.
[project.scripts]
phenoteka = "phenoteka.cli.main:main"


# ---------------------------
# Project URLs (PyPI side panel)
# ---------------------------
[project.urls]
Homepage = "https://github.com/eggduzao/phenoteka"
Documentation = "https://phenoteka.org/docs"
Source = "https://github.com/eggduzao/phenoteka"
Issues = "https://github.com/eggduzao/phenoteka/issues"
GusmaoLab = "https://www.gusmaolab.org"


# ======================================================================
# Setuptools configuration
# ======================================================================
[tool.setuptools]
# Use the canonical `src/` layout. This improves import/time-to-test correctness.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
# Exclude common non-package directories from distribution
exclude = [
  "tests*", "docs*", "examples*", "notebooks*", "research*", "_scratch*",
  "data*",  # data is local-only; not shipped
]

# Include non-Python files from the package if/when needed (e.g., templates).
# You can add globs later if you ship internal YAMLs or Dash assets under src/.
[tool.setuptools.package-data]
phenoteka = ["py.typed"]

# If you ship typed packages, expose the marker file:
[tool.setuptools.dynamic]
# (left empty for now; consider setuptools_scm in the future)


# ======================================================================
# Tooling configs
# ======================================================================

# ---------------------------
# Ruff (lint+format supertool)
# ---------------------------
[tool.ruff]
line-length = 88
target-version = "py312"
# Enable useful rulesets; keep it friendly at first.
lint.select = [
  "D",    # docstrings
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort-like import sorting
  "UP",   # pyupgrade
  "B",    # bugbear
  "C4",   # comprehensions
  "DTZ",  # datetime
  "TID",  # tidy imports
  "ARG",  # unused arguments
]
lint.ignore = [
  "E501",  # let ruff/black handle line wrapping
]
exclude = ["docs", "data", "notebooks", "examples", "tests/fixtures"]
extend-ignore = ["E203", "W503"]

# For 'chatty files' ignore them
#[tool.ruff.per-file-ignores]
#"tests/**" = ["S101"]  # no assert warnings in tests, for example

# ---------------------------
# Fale 8 (optional linting)
# ---------------------------
[flake8]
max-line-length = 88

# ---------------------------
# Black (opinionated formatter)
# ---------------------------
[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
  \.git
 | \.venv
 | build
 | dist
 | docs
 | data
 | notebooks
)/
'''

# ---------------------------
# isort (import sorting)
# ---------------------------
[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

# ---------------------------
# MyPy (static typing)
# ---------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true
# External libs may lack type hints; relax as needed:
ignore_missing_imports = true
# Per-module overrides can be added later as the codebase grows.

# ---------------------------
# Pytest
# ---------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
  -ra
  --strict-markers
  --strict-config
  --tb=short
  --cov=phenoteka
  --cov-report=term-missing
"""
testpaths = ["tests"]
markers = [
  "slow: long-running tests",
  "integration: hits external systems/APIs",
  "e2e: CLI end-to-end smoke tests",
]

# ---------------------------
# Coverage.py
# ---------------------------
[tool.coverage.run]
branch = true
source = ["phenoteka"]  # import name, not path
omit = [
  "src/phenoteka/__main__.py",
  "src/phenoteka/cli/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

# ---------------------------
# Tox (task automation / env matrix)
# ---------------------------
# Minimal inline config for convenience; full tox.ini can coexist at repo root.
[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py312, lint, type, docs
isolated_build = True
skipsdist = True

[testenv]
deps = .[test]
commands = pytest

[testenv:lint]
deps = .[dev]
commands =
    ruff check src tests
    black --check src tests
    isort --check-only src tests

[testenv:type]
deps = .[dev]
commands = mypy src

[testenv:docs]
deps = .[docs,notebooks]
commands =
    sphinx-build -b html docs/source docs/build/html
"""

# ---------------------------
# Sphinx helper (non-standard; kept for discoverability)
# ---------------------------
[tool.sphinx]
builder = "html"
source-dir = "docs/source"
build-dir = "docs/build"
config-dir = "docs/source"