# ======================================================================
# Phenoteka — setup.cfg
# ======================================================================
# Purpose:
#   Centralized configuration for tools that (still) read from setup.cfg.
#   Phenoteka primarily uses pyproject.toml (PEP 621) for build metadata and
#   most tooling, but keeping setup.cfg helps IDEs and legacy tools that look
#   here first.
#
# Important:
#   • Package metadata, build backend, dependencies, and console scripts are
#     declared in pyproject.toml (authoritative).
#   • This file focuses on setuptools discovery hints and tool configs
#     (flake8, mypy, isort, coverage, napoleon, etc.).
#   • We mirror values chosen in pyproject.toml to avoid drift.
# ======================================================================


# ----------------------------------------------------------------------
# setuptools: package discovery hints
# ----------------------------------------------------------------------
[metadata]
name = phenoteka
version = 0.1.0
description = A modular, research-grade platform for phenotypic data ETL, quality metrics, semantic harmonization, and intelligent imputation.
author = Eduardo Gade Gusmao
license = AGPL-3.0-or-later
long_description = file: README.md
long_description_content_type = text/markdown
# NOTE: For classifiers/urls, see pyproject.toml [project] and [project.urls].

[options]
# We use the modern src/ layout (authoritative in pyproject as well)
package_dir =
    = src
packages = find:
python_requires = >=3.12
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests
    docs
    notebooks
    examples
    research
    _scratch
    data

# ----------------------------------------------------------------------
# flake8 — kept for IDE integration and contributors who prefer flake8.
# ruff is our primary linter (configured in pyproject.toml). The goal
# here is to align flake8 behavior with our ruff/black conventions.
# ----------------------------------------------------------------------
[flake8]
max-line-length = 100
extend-ignore =
    E203,  # whitespace before ':' (black-compatible)
    W503,  # line break before binary operator (black-compatible)
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    .eggs,
    *.egg-info,
    docs,
    data,
    notebooks,
    research
per-file-ignores =
    __init__.py: F401  # allow unused imports for package exposition

# ----------------------------------------------------------------------
# mypy — static typing. Mirrors strict settings from pyproject.toml.
# Some IDEs read setup.cfg by default, so we keep it here as well.
# If both are present, you can invoke `mypy --config-file=pyproject.toml`
# to enforce single-source-of-truth. Otherwise these settings are fine.
# ----------------------------------------------------------------------
[mypy]
python_version = 3.12
strict = True
ignore_missing_imports = True         # Relax vendor libs without stubs
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
show_error_codes = True
pretty = True

# Example of future per-module relaxations:
# [mypy-phenoteka.external.*]
# disallow_untyped_defs = False

# ----------------------------------------------------------------------
# isort — import sorting. Profile is set to "black" to coexist nicely.
# ruff also enforces import order; this remains for editor tooling.
# ----------------------------------------------------------------------
[isort]
profile = black
line_length = 100
known_first_party = phenoteka
src_paths = src, tests
multi_line_output = 3
include_trailing_comma = True
skip_gitignore = True

# ----------------------------------------------------------------------
# pytest — we keep a minimal config for editors that prefer setup.cfg.
# The authoritative pytest options live in pyproject.toml
#   [tool.pytest.ini_options]
# This section is intentionally light to avoid conflicts.
# ----------------------------------------------------------------------
[tool:pytest]
addopts = -ra --tb=short
testpaths = tests

# ----------------------------------------------------------------------
# coverage.py — align with pyproject values (fail_under may differ in CI).
# These settings make `coverage run -m pytest` + `coverage report` behave
# consistently outside tox as well.
# ----------------------------------------------------------------------
[coverage:run]
branch = True
source =
    src/phenoteka
omit =
    src/phenoteka/__main__.py
    src/phenoteka/cli/*

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 85

[coverage:html]
directory = docs/build/coverage_html

# ----------------------------------------------------------------------
# Sphinx Napoleon — docstring style guidance for autodoc.
# We prefer NumPy-style docstrings across Phenoteka.
# ----------------------------------------------------------------------
[napoleon]
google_docstring = False
numpy_docstring = True
include_init_with_doc = True
include_private_with_doc = False
use_admonition_for_examples = False
use_admonition_for_notes = True
use_admonition_for_references = True